name:                pure-time
version:             0.8.0.0
homepage:            purehs.org/doc/pure-time
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-time.git

library
  build-depends:
    base,
    hashable,
    time,
    pure-txt,
    pure-json,
    pure-default

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.Time
    Pure.Data.Time.Internal
    Pure.Data.Time.Format

  if (impl(ghcjs))
    other-modules:
      Pure.Data.Time.GHCJS

  else
    other-modules:
      Pure.Data.Time.GHC

  default-language: Haskell2010
